argocd/base/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: media
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:2.6.5.5623-ls162
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9696
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          volumeMounts:
            - name: prowlarr-pvc
              mountPath: /config
      volumes:
        - name: prowlarr-pvc
          persistentVolumeClaim:
            claimName: prowlarr-pvc
