argocd/base/prowlarr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prowlarr
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prowlarr.streamixs.com`)
      kind: Rule
      middlewares:
        - name: forward-auth
          namespace: auth
      services:
        - name: prowlarr
          port: 9696
  tls: {}
